[gd_scene load_steps=4 format=3 uid="uid://b7wj2dh68x1sb"]

[ext_resource type="Theme" uid="uid://b8u4odj3rruh3" path="res://core/Resources/Themes/DefaultTheme.tres" id="1_km0lb"]
[ext_resource type="StyleBox" uid="uid://cqa37spqmo4eg" path="res://core/Resources/Themes/WindowTheme.tres" id="1_oqsms"]
[ext_resource type="Script" path="res://editor/plugins/SettingsWindows/SettingsWindow.gd" id="1_xta4s"]

[node name="SettingsWindow" type="Window"]
transparent_bg = true
title = "Project Settings"
position = Vector2i(0, 36)
size = Vector2i(600, 400)
theme = ExtResource("1_km0lb")
theme_override_styles/embedded_border = ExtResource("1_oqsms")
theme_override_styles/embedded_unfocused_border = ExtResource("1_oqsms")
script = ExtResource("1_xta4s")

[node name="TabContainer" type="TabContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
current_tab = 0

[node name="General" type="Control" parent="TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/General"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SongNameLineEdit" type="LineEdit" parent="TabContainer/General/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Name Of Song"

[node name="ArtistNameLineEdit" type="LineEdit" parent="TabContainer/General/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Name Of Artist"

[node name="CharterNameLineEdit" type="LineEdit" parent="TabContainer/General/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Chart Made By"

[node name="Control" type="Control" parent="TabContainer/General/VBoxContainer"]
visible = false
layout_mode = 2

[node name="SetCoverButton" type="Button" parent="TabContainer/General/VBoxContainer"]
visible = false
layout_mode = 2
text = "Set Cover Image"
alignment = 0

[node name="SetAudioButton" type="Button" parent="TabContainer/General/VBoxContainer"]
visible = false
layout_mode = 2
text = "Set Audio File"
alignment = 0

[node name="Editor" type="Control" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Editor"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="text_changed" from="TabContainer/General/VBoxContainer/SongNameLineEdit" to="." method="_on_song_name_line_edit_text_changed"]
[connection signal="text_changed" from="TabContainer/General/VBoxContainer/ArtistNameLineEdit" to="." method="_on_artist_name_line_edit_text_changed"]
[connection signal="text_changed" from="TabContainer/General/VBoxContainer/CharterNameLineEdit" to="." method="_on_charter_name_line_edit_text_changed"]
